Fix BurguerMenu on Firefox
Firefox was displaying the icon in the middle of the screen, so it reposition the menu back to the top.

--- a/src/components/burguerMenu/BurguerMenu.css
+++ b/src/components/burguerMenu/BurguerMenu.css
@@ -7,38 +7,31 @@
 		display: initial;
 		height: 58px;
 		padding: 0;
+		background-color: rgba(0, 0, 0, 0);
+		transition: background-color 0.4s ease;
 	}
 
 	.BurguerMenu.open {
-		height: 100%;
-	}
-
-	.BurguerMenu.open button {
 		background-color: rgba(0, 0, 0, 0.6);
 		width: 100%;
 		height: 100%;
-		display: inline-flex;
-		flex-direction: column;
-		align-items: flex-end;
-		justify-content: flex-start;
-	}
-
-	.BurguerMenu button {
 		display: block;
 		position: fixed;
-		right: 0;
-		top: 0;
-		padding: 1em;
-		background: rgba(0,0,0,0);
-		border: 0;
 	}
 
 	.BurguerMenu button,
 	.BurguerMenu button:focus {
+		display: block;
+		position: fixed;
+		right: 0;
+		top: 0;
+		margin: 0;
+		padding: 1em;
+		background: rgba(0,0,0,0);
 		border: none;
 		outline: none;
 	}
-
+	
 	.BurguerMenu button::-moz-focus-inner {
 		border: 0;
 	}
